# meeting-scribe

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  whisper_cmd.rs
src/components/: Layout.tsx
src/pages/: Home.tsx  Settings.tsx  Summary.tsx
src/services/: claude.ts  exporter.ts  recorder.ts
src/services/ai/: claude.ts  gemini.ts  index.ts  ollama.ts  openai.ts  prompt.ts
src/store/: settingsStore.ts
src/types/: index.ts
