[package]
name = "meeting-scribe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "meeting_scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Whisper
whisper-rs = "0.14"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# HTTP download
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Filesystem / paths
dirs = "5.0"
tokio = { version = "1", features = ["fs", "rt"] }
